modules/gdscript/tests/scripts/analyzer/errors/dictionary_duplicate_key_python.gd
func test():
	var python_dict = {
		"a": 1,
		"b": 2,
		"a": 3, # Duplicate isn't allowed.
	}
